# indexer

./: .gitignore  CLAUDE.md  README.md  benchmark.py  install.sh  pyproject.toml  research.md  uninstall.sh
.claude/: settings.json
.claude/commands/: index-codebase.md  indexer-setup.md  setup-indexer.md
.claude/hooks/: pretool-indexer-hint.sh
.claude/skills/explore-with-indexer/: SKILL.md
.claude/skills/index-codebase/: SKILL.md
.claude/skills/indexer-explore/: SKILL.md
.claude/skills/indexer-index/: SKILL.md
.claude/skills/indexer-setup/: SKILL.md
.claude/skills/setup-indexer/: SKILL.md
claude/: settings.local.json
claude/commands/: indexer-index.md  indexer-setup.md
claude/hooks/: pretool-indexer-hint.sh
claude/skills/indexer-explore/: SKILL.md
plugin/: settings.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: test_pretool_hook.sh
plugin/skills/explore/: SKILL.md
plugin/skills/index/: SKILL.md
plugin/skills/setup/: SKILL.md
src/indexer/: __init__.py  cli.py  config.py  db.py  error_log.py  freshness.py  scanner.py  tokens.py
src/indexer/graph/: builder.py  pagerank.py  repomap.py
src/indexer/parsing/: extractors.py  languages.py  parser.py
src/indexer/plugin/hooks/: pretool-indexer-hint.sh
src/indexer/skeleton/: extractor.py
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_error_log.py  test_extractors.py  test_freshness.py  test_graph_builder.py  test_languages.py  test_pagerank.py  test_repomap.py  test_scanner.py  test_skeleton.py  test_tokens.py
