[project]
name = "indexer"
version = "0.1.0"
description = "AI-optimized codebase index generator using Tree-sitter AST parsing, code skeletons, and PageRank"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "tree-sitter>=0.24",
    "networkx>=3.2",
    "tiktoken>=0.7",
    "pathspec>=0.12",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.1",
    "tree-sitter-java>=0.23.5",
]

[project.scripts]
indexer = "indexer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/indexer"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff"]
